--- a/templates/create.html
+++ b/templates/create.html
@@ -11,16 +11,40 @@
   <body>
 
     <div class="container">
-      <h1>Edit item</h1>
+      <h1>Add competition</h1>
 
-      <form method="post" action="/items/new">
+      <form method="post" action="/competitions/new">
         <div class="form-group">
-          <label for="title">Title</label>
-          <input type="text" class="form-control" name="title" id="title" value="{{.Title}}">
+          <label for="name">Title</label>
+          <input type="text" class="form-control" name="name" id="name" value="{{.Name}}">
+        </div>
+        <!-- <div class="form-group">
+          <label for="date">Date</label>
+          <textarea class="form-control" name="date" id="date" rows="1">{{.Date}}</textarea>
+        </div> -->
+        <div class="form-group">
+          <label for="ageCategory">Age category</label>
+          <textarea class="form-control" name="ageCategory" id="ageCategory" rows="1">{{.AgeCategory}}</textarea>
         </div>
         <div class="form-group">
-          <label for="description">Description</label>
-          <textarea class="form-control" name="description" id="description" rows="3">{{.Description}}</textarea>
+          <label for="weaponType">Weapon Type</label>
+          <textarea class="form-control" name="weaponType" id="weaponType" rows="1">{{.WeaponType}}</textarea>
+        </div>
+        <div class="form-group">
+          <label for="isTeam">Is team</label>
+          <textarea class="form-control" name="isTeam" id="isTeam" rows="1">{{.IsTeam}}</textarea>
+        </div>
+        <div class="form-group">
+          <label for="status">Status</label>
+          <textarea class="form-control" name="status" id="status" rows="1">{{.Status}}</textarea>
+        </div>
+        <div class="form-group">
+          <label for="sex">Sex</label>
+          <textarea class="form-control" name="sex" id="sex" rows="1">{{.Sex}}</textarea>
+        </div>
+        <div class="form-group">
+          <label for="type">Type</label>
+          <textarea class="form-control" name="type" id="type" rows="1">{{.Type}}</textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
