--- a/templates/login.html
+++ b/templates/login.html
@@ -11,14 +11,14 @@
   <body>
 	<div class="container">
         <h1>MyFencing login</h1>
-        <form method="POST" action="/sessions">
+        <form method="POST" action="/login">
             <div class="form-group">
                 <label for="email">email</label>
-                <input type="text" class="form-control" name="email" id="email" value="ololo@example.org">
+                <input type="text" class="form-control" name="email" id="email" value="user@example.org">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" id="password" value="love">
+                <input type="password" class="form-control" name="password" id="password" value="password">
             </div>
             <button type="submit" class="btn btn-primary">Login</button>
         </form>
